k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1   #rewrites every request with /api to /
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
            path: /?(.*)                                  #route everything general to client
          - backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
            path: /api/?(.*)                               #route every request beginning with /api/ to server
